--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^7.1.4"
   },
   "repository": {
     "type": "git",
